--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
   },
   "require": {
     "monolog/monolog": "^1.23",
-    "doctrine/dbal": "^2.8"
+    "doctrine/dbal": "^2.8",
+    "symfony/console": "^4.1"
   }
 }
